--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "express": "^4.16.3",
+    "immutable": "^4.0.0-rc.14",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
